# github-tipps-dwx24

./: Cargo.toml  README.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: rust_build.yml
src/: calc.rs  goodbye.rs  server.rs
