[package]
name = "basta-github-demo"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "calc"
path = "src/calc.rs"

[[bin]]
name = "goodbye"
path = "src/goodbye.rs"

[[bin]]
name = "hello"
path = "src/hello.rs"

[[bin]]
name = "server"
path = "src/server.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
